PSoC101/Lab05.cydsn/BUILD.log
--------------- Build Started: 11/02/2023 17:13:16 Project: Lab05, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\MIHAILO\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\MIHAILO\Documents\PSoC Creator\PSoC101\Lab05.cydsn\Lab05.cyprj" -d CY8C4245AXI-483 -s "C:\Users\MIHAILO\Documents\PSoC Creator\PSoC101\Lab05.cydsn\Generated_Source\PSoC4" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Warning: mpr.M0021: Control signal "dsrff(reset)" driving signal "\PWM_1:PWMUDB:min_kill_reg\" is always "high". (App=cydsfit)
Warning: mpr.M0021: Control signal "dsrff(reset)" driving signal "\PWM_1:PWMUDB:runmode_enable\" is always "high". (App=cydsfit)
Warning: mpr.M0021: Control signal "dsrff(reset)" driving signal "\PWM_1:PWMUDB:ltch_kill_reg\" is always "high". (App=cydsfit)
Warning: mpr.M0021: Control signal "dsrff(reset)" driving signal "\PWM_1:PWMUDB:dith_count_1\" is always "high". (App=cydsfit)
Warning: mpr.M0021: Control signal "dsrff(reset)" driving signal "\PWM_1:PWMUDB:dith_count_0\" is always "high". (App=cydsfit)
Warning: mpr.M0021: Control signal "dsrff(reset)" driving signal "\PWM_1:PWMUDB:status_0\" is always "high". (App=cydsfit)
Warning: mpr.M0021: Control signal "dsrff(reset)" driving signal "\PWM_1:PWMUDB:status_1\" is always "high". (App=cydsfit)
Warning: mpr.M0021: Control signal "dsrff(reset)" driving signal "\PWM_1:PWMUDB:status_5\" is always "high". (App=cydsfit)
ADD: mpr.M0037: information: Unused pieces of the design have been optimized out. See the Tech mapping section of the report file for details.
 * C:\Users\MIHAILO\Documents\PSoC Creator\PSoC101\Lab05.cydsn\codegentemp\Lab05.rpt (Tech mapping)
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/PWM_1.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c Generated_Source\PSoC4\PWM_1.c -o .\CortexM0\ARM_GCC_541\Debug\PWM_1.o
Generated_Source\PSoC4\PWM_1.c:28:6: error: #error PWM_v3_30 detected with a constant 0 for the enable or constant 1 for reset. This will prevent the component from operating.
     #error PWM_v3_30 detected with a constant 0 for the enable or \
      ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 11/02/2023 17:13:25 ---------------
